--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               learned over the years in <strong>Web Development</strong> so it
               can help other people of the Dev Community. Feel free to Connect
               or Follow me on my
-              <a rel="noreferrer" href="https://www.linkedin.com/in/md-saymon-shahariya-614aa9bb/" target="_blank">Linkedin</a>
-              where I post useful content related to Web Development and
-              Programming
+              <a rel="noreferrer" href="https://www.linkedin.com/in/md-saymon-shahariya-614aa9bb/" target="_blank">Linkedin</a>.
+              <!-- where I post useful content related to Web Development and
+              Programming -->
             </p>
             <p class="about__content-details-para">
               I'm open to <strong>Job</strong> opportunities where I can
