--- a/project-1.1.html
+++ b/project-1.1.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <title>TNR</title>
+  <title>Delta Furnishers</title>
   <meta name="description" content="Case study page of Project" />
 
   <link href='https://d33wubrfki0l68.cloudfront.net/css/b14c4959d2141192dcad9a56bef700e9b47ebb62/css/style.css' rel='stylesheet'/>
@@ -76,16 +76,17 @@
   </header>
   <section class="project-cs-hero">
     <div class="project-cs-hero__content">
-      <h1 class="heading-primary">TNR</h1>
+      <h1 class="heading-primary">Delta Furnishers</h1>
       <div class="project-cs-hero__info">
         <p class="text-primary">
-          This page contains the case study of TNR Template which
-          includes the Project Overview, Tools Used and Live Links to the
-          official product.
+          This page contains the case study of Delta Furnishers Open-Source Project which includes
+          the Project Overview, Tools Used and Live Links to the official
+          product.
         </p>
       </div>
       <div class="project-cs-hero__cta">
-        <a href="https://fc-rest.netlify.app/" class="btn btn--bg" target="_blank" rel="noreferrer">Live Link</a>
+        <a href="https://deltafurnishers.com/" class="btn btn--bg" target="_blank" rel="noreferrer">Project
+          Link</a>
       </div>
     </div>
   </section>
@@ -93,42 +94,37 @@
     <div class="main-container">
       <div class="project-details__content">
         <div class="project-details__showcase-img-cont">
-          <img src="https://d33wubrfki0l68.cloudfront.net/74f6186aaa2b6d5f6ea6da1013abfeb672f5c807/aee81/assets/jpeg/crown-template.jpeg" alt="Project Image" class="project-details__showcase-img" />
+          <img src="./assets/img/projects/delta.png" alt="Project Image" class="project-details__showcase-img" />
         </div>
         <div class="project-details__content-main">
           <div class="project-details__desc">
             <h2 class="project-details__content-title">Project Overview</h2>
+            
             <p class="project-details__desc-para">
-                TNR, founded in 2021 by Trina Falgune and Sheikh Naeem in Bangladesh, addresses a gap in the local leisure and recreation landscape. Amidst a culture where leisure typically entails movies or dining out, and overseas travel remains a luxury, TNR stands out by offering distinctive experiences within Bangladesh itself. Leveraging the country's untapped potential in unexplored venues, natural habitats, and wildlife, TNR provides accessible and exhilarating domestic adventures. Through these offerings, TNR aims to enrich the lifestyle of locals, granting them frequent opportunities for excitement and exploration.
+                Delta Furnishers stands out as a pioneer in the realm of minimalist yet elegant furniture commerce, where luxury becomes more than just an idea—it becomes a way of life. In today's digital age, Delta has set out on a journey to redefine the sector of simple yet stunning furniture through its cutting-edge e-commerce platform.
             </p>
-            <!-- <p class="project-details__desc-para">
-              By taking User Interface ideas by visiting different types of
-              websites of the same industry and even visited platforms like
-              dribble to get inspiration for building a good User Interface
-              that will bring great results.
-            </p> -->
             <p class="project-details__desc-para">
-              Feel free to check out the Project by visiting the Live Link.
+              Feel free to check out the Project by visiting the Project Link.
             </p>
           </div>
           <div class="project-details__tools-used">
             <h2 class="project-details__content-title">Tools Used</h2>
             <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">Vuejs</div>
-                <div class="skills__skill">Nuxtjs</div>
-                <div class="skills__skill">Bootstrap</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">GitLab</div>
+              <div class="skills__skill">HTML</div>
+              <div class="skills__skill">CSS</div>
+              <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Vuejs</div>
+              <div class="skills__skill">Nuxtjs</div>
+              <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">GIT</div>
+              <div class="skills__skill">GitLab</div>
             </div>
           </div>
           <div class="project-details__links">
             <h2 class="project-details__content-title">See Live</h2>
-            <a href="https://fc-rest.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
-              target="_blank" rel="noreferrer">Live Link</a>
+            <a href="https://deltafurnishers.com/" class="btn btn--med btn--theme project-details__links-btn"
+              target="_blank" rel="noreferrer">Project Link</a>
             <a href="index.html" class="btn btn--med btn--theme-inv project-details__links-btn">Go Back</a>
           </div>
         </div>
@@ -147,10 +143,10 @@
               <img class="main-footer__icon" src="https://d33wubrfki0l68.cloudfront.net/7f29579dde49e02480372aa49f7189c5536b0118/34b92/assets/png/linkedin-ico.png"
                 alt="Md Saymon Shahariya Linkedin Profile" />
             </a>
-            <a target="_blank" rel="noreferrer" href="https://github.com/rammcodes">
+            <!-- <a target="_blank" rel="noreferrer" href="https://github.com/rammcodes">
               <img class="main-footer__icon" src="https://d33wubrfki0l68.cloudfront.net/5557d5a11584d7201a38ee1a95200f57a4cc0f88/15085/assets/png/github-ico.png" alt="RammCodes Github Profile" />
             </a>
-            <!-- <a target="_blank" rel="noreferrer" href="https://twitter.com/rammcodes">
+            <a target="_blank" rel="noreferrer" href="https://twitter.com/rammcodes">
               <img class="main-footer__icon" src="https://d33wubrfki0l68.cloudfront.net/ef67339f7016cb09ba66366c1dc9145ac69f2a21/feca1/assets/png/twitter-ico.png" alt="RammCodes Twitter Profile" />
             </a>
 
