project-4 live link modified

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <p class="projects__row-content-desc">
                   BIye.io offers a comprehensive event planning solution, consolidating all your needs in one convenient platform. From budget calculation to guest lists, vendors to custom websites, BIye.io provides a range of services and packages tailored to your event planning requirements.
               </p>
-              <a class='btn btn--med btn--theme dynamicBgClr' href='project-2' target='_blank'>Case Study</a>
+              <a class='btn btn--med btn--theme dynamicBgClr' href='project-2.html' target='_blank'>Case Study</a>
             </div>
           </div>
         <div class="projects__row">
@@ -242,7 +242,7 @@
             <p class="projects__row-content-desc">
                 Akhtar Furnishers stands at the forefront of luxury furniture commerce, where opulence transcends mere concept to become a lifestyle. In this age of digital convenience, Akhtar embarked on a journey to redefine the luxury furniture sector through a premier e-commerce platform.
             </p>
-            <a class='btn btn--med btn--theme dynamicBgClr' href='project-1' target='_blank'>Case Study</a>
+            <a class='btn btn--med btn--theme dynamicBgClr' href='project-1.html' target='_blank'>Case Study</a>
           </div>
         </div>
 
@@ -273,7 +273,7 @@
             <p class="projects__row-content-desc">
                 Heavy Metal T-Shirt stands as an innovative online eCommerce platform, exclusively curated for aficionados of band-themed apparel. Offering a diverse range of merchandise including t-shirts, hoodies, tank tops, and beyond, HMT ensures that music enthusiasts can flaunt their passion in style.
             </p>
-            <a class='btn btn--med btn--theme dynamicBgClr' href='project-3' target='_blank'>Case Study</a>
+            <a class='btn btn--med btn--theme dynamicBgClr' href='project-3.html' target='_blank'>Case Study</a>
           </div>
         </div>
         <div class="projects__row">
@@ -286,7 +286,7 @@
             <p class="projects__row-content-desc">
                 TNR, established in 2021 by Trina Falgune and Sheikh Naeem in Bangladesh, fills a niche in the local leisure and recreation scene. In a country where leisure often means movies or dining out, and international travel is limited to a select few, TNR offers unique experiences within Bangladesh itself. Recognizing the country's untapped potential in unexplored venues, natural habitats, and wildlife, TNR provides affordable and thrilling domestic adventures. Through this, TNR aims to elevate the lifestyle of locals, offering them frequent opportunities for excitement and discovery.
             </p>
-            <a class='btn btn--med btn--theme dynamicBgClr' href='project-4' target='_blank'>Case Study</a>
+            <a class='btn btn--med btn--theme dynamicBgClr' href='project-4.html' target='_blank'>Case Study</a>
           </div>
         </div>
       </div>
