--- a/project-3.html
+++ b/project-3.html
@@ -85,7 +85,7 @@
         </p>
       </div>
       <div class="project-cs-hero__cta">
-        <a href="https://bc-clone.netlify.app/" class="btn btn--bg" target="_blank" rel="noreferrer">Live Link</a>
+        <a href="https://heavymetaltshirtbd.com/" class="btn btn--bg" target="_blank" rel="noreferrer">Live Link</a>
       </div>
     </div>
   </section>
@@ -126,7 +126,7 @@
           </div>
           <div class="project-details__links">
             <h2 class="project-details__content-title">See Live</h2>
-            <a href="https://bc-clone.netlify.app/" class="btn btn--med btn--theme project-details__links-btn"
+            <a href="https://heavymetaltshirtbd.com/" class="btn btn--med btn--theme project-details__links-btn"
               target="_blank" rel="noreferrer">Live Link</a>
             <a href="index.html" class="btn btn--med btn--theme-inv project-details__links-btn">Go Back</a>
           </div>
