--- a/index.html
+++ b/index.html
@@ -294,6 +294,36 @@
   </section>
   <section id="contact" class="contact sec-pad dynamicBg">
     <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-med">
+            <span class="heading-sec__main heading-sec__main--lt">Contact</span>
+            <span class="heading-sec__sub heading-sec__sub--lt">
+                Feel free to Contact me by submitting the form below and I will get
+                back to you as soon as possible
+            </span>
+        </h2>
+        <div class="contact__form-container">
+            <form class='contact__form' id="contactForm">
+                <input type='hidden' name='form-name' value='form 1' />
+                <div class="contact__form-field">
+                    <label class="contact__form-label" for="name">Name</label>
+                    <input required placeholder="Enter Your Name" id="infoName" type="text" class="contact__form-input" name="name" />
+                    <span class="error-message" id="nameError"></span>
+                </div>
+                <div class="contact__form-field">
+                    <label class="contact__form-label" for="email">Email</label>
+                    <input required placeholder="Enter Your Email" id="infoEmail" type="email" class="contact__form-input" name="email" />
+                    <span class="error-message" id="emailError"></span>
+                </div>
+                <div class="contact__form-field">
+                    <label class="contact__form-label" for="message">Message</label>
+                    <textarea required cols="30" rows="10" id="infoMessage" class="contact__form-input" placeholder="Enter Your Message" name="message"></textarea>
+                    <span class="error-message" id="messageError"></span>
+                </div>
+            </form>
+            <button type="submit" onclick="sendEmail()" id="myAnchor" class="btn btn--theme contact__btn">Submit</button>
+        </div>
+    </div>
+    <!-- <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main heading-sec__main--lt">Contact</span>
         <span class="heading-sec__sub heading-sec__sub--lt">
@@ -318,13 +348,10 @@
             <textarea required cols="30" rows="10" id="infoMessage" class="contact__form-input" placeholder="Enter Your Message"
               name="message" id="message"></textarea>
           </div>
-          <!-- <button type="submit" id="myAnchor" class="btn btn--theme contact__btn" onclick="sendEmail()">
-            Submit
-          </button> -->
         </form>
         <button type="submit" onclick="sendEmail()" id="myAnchor" class="btn btn--theme contact__btn">Submit</button>
       </div>
-    </div>
+    </div> -->
   </section>
   <footer class="main-footer">
     <div class="main-container">
@@ -380,42 +407,120 @@
             src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
     <script type="text/javascript">
+        function validateForm() {
+        let isValid = true;
+
+        let infoName = document.getElementById('infoName').value.trim();
+        let infoEmail = document.getElementById('infoEmail').value.trim();
+        let infoMessage = document.getElementById('infoMessage').value.trim();
+
+        let nameError = document.getElementById('nameError');
+        let emailError = document.getElementById('emailError');
+        let messageError = document.getElementById('messageError');
+
+        nameError.textContent = "";
+        emailError.textContent = "";
+        messageError.textContent = "";
+
+        if (!infoName) {
+            nameError.textContent = "Name is required.";
+            isValid = false;
+        }
+
+        if (!infoEmail) {
+            emailError.textContent = "Email is required.";
+            isValid = false;
+        } else if (!validateEmail(infoEmail)) {
+            emailError.textContent = "Invalid email format.";
+            isValid = false;
+        }
+
+        if (!infoMessage) {
+            messageError.textContent = "Message is required.";
+            isValid = false;
+        }
+
+        return isValid;
+    }
+
+    function validateEmail(email) {
+        const re = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+        return re.test(String(email).toLowerCase());
+    }
+
+    function sendEmail() {
+        emailjs.init({
+            publicKey: "6UjvitrsTssNlFnSa",
+        });
+
+        document.getElementById("myAnchor").addEventListener("click", function(event) {
+            event.preventDefault();
+        });
+
+        setTimeout(() => {
+            if (validateForm()) {
+                let infoName = document.getElementById('infoName').value.trim();
+                let infoEmail = document.getElementById('infoEmail').value.trim();
+                let infoMessage = document.getElementById('infoMessage').value.trim();
+
+                let templateParams = {
+                    from_name: infoName,
+                    from_email: infoEmail,
+                    message: infoMessage,
+                };
+
+                emailjs.send('service_5n4ql5z', 'template_j2cmidj', templateParams, "6UjvitrsTssNlFnSa").then(
+                    (response) => {
+                        console.log('SUCCESS!', response.status, response.text);
+                        document.getElementById('infoName').value = "";
+                        document.getElementById('infoEmail').value = "";
+                        document.getElementById('infoMessage').value = "";
+                    },
+                    (error) => {
+                        console.log('FAILED...', error);
+                    },
+                );
+            }
+        }, 1000);
+    }
     // (function(){
     //     emailjs.init({
     //         publicKey: "6UjvitrsTssNlFnSa",
     //     });
         
     // })();
-    function sendEmail() {
-        emailjs.init({
-            publicKey: "6UjvitrsTssNlFnSa",
-        });
-        document.getElementById("myAnchor").addEventListener("click", function(event){
-            event.preventDefault()
-        });
-        setTimeout(() => {
-            let infoName = document.getElementById('infoName').value;
-            let infoEmail = document.getElementById('infoEmail').value;
-            let infoMessage = document.getElementById('infoMessage').value;
-            let templateParams = {
-                from_name: infoName,
-                from_email: infoEmail,
-                message: infoMessage,
-            };
-            emailjs.send('service_5n4ql5z', 'template_j2cmidj', templateParams, "6UjvitrsTssNlFnSa").then(
-                (response) => {
-                    console.log('SUCCESS!', response.status, response.text);
-                    document.getElementById('infoName').value = "";
-                    document.getElementById('infoEmail').value = "";
-                    document.getElementById('infoMessage').value = "";
-                },
-                (error) => {
-                    console.log('FAILED...', error);
-                },
-            );
-        }, 1000);
+    // function sendEmail() {
+    //     emailjs.init({
+    //         publicKey: "6UjvitrsTssNlFnSa",
+    //     });
+    //     document.getElementById("myAnchor").addEventListener("click", function(event){
+    //         event.preventDefault()
+    //     });
+    //     setTimeout(() => {
+    //         let infoName = document.getElementById('infoName').value;
+    //         let infoEmail = document.getElementById('infoEmail').value;
+    //         let infoMessage = document.getElementById('infoMessage').value;
+    //         let templateParams = {
+    //             from_name: infoName,
+    //             from_email: infoEmail,
+    //             message: infoMessage,
+    //         };
+    //         if (infoName.trim().length && infoEmail.trim().length && infoMessage.trim().length) {
+    //             emailjs.send('service_5n4ql5z', 'template_j2cmidj', templateParams, "6UjvitrsTssNlFnSa").then(
+    //                 (response) => {
+    //                     console.log('SUCCESS!', response.status, response.text);
+    //                     document.getElementById('infoName').value = "";
+    //                     document.getElementById('infoEmail').value = "";
+    //                     document.getElementById('infoMessage').value = "";
+    //                 },
+    //                 (error) => {
+    //                     console.log('FAILED...', error);
+    //                 },
+    //             );
+    //         }
+    //     }, 1000);
         
-    }
+    // }
     </script>
     <script>
         // let infoName = document.getElementById('infoName').value;
