index page contact section modified

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
     gtag('config', 'G-QD9ESD1D9K')
   </script> -->
+  <style>
+    .error-message {
+        color: #ff0000;
+    }
+  </style>
 </head>
 
 <body>
