index page  modified

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                     description: `
                             <p>Admin panels are essential for managing dynamic website content such as shop product images, information, category details, about us sections, terms & conditions, and banner images. They provide robust tools for maintaining and updating crucial site data, ensuring relevance and engagement.</p>
                         `,
-                    type: 'app',
+                    type: 'adminPanel',
                     tags: ["Javascript", "jQuery", "HTML", "SCSS", "Bulma", "Git"],
                     image: "assets/images/portfolio/admin.png",
                     imageV2: "",
@@ -798,7 +798,7 @@
                     description: `
                             <p>Mini ERP solution is designed to efficiently manage PSO (Purchase, Sales, and Supply) operations, streamline purchase management, track cash and bank account information, and visualize data through intuitive charts. It offers comprehensive tools for integrated business management, enhancing operational efficiency and decision-making.</p>
                         `,
-                    type: 'app',
+                    type: 'ERP',
                     tags: ["Javascript", "Vue.js", "HTML", "SCSS", "Bulma", "Git"],
                     image: "assets/images/portfolio/erp.png",
                     imageV2: "",
@@ -823,7 +823,7 @@
                     description: `
                             <p>A POS solution streamlines retail operations by automating sales transactions, inventory management, and customer interactions in real-time. It enhances efficiency, accuracy, and customer service, making it essential for modern retail environments.</p>
                         `,
-                    type: 'app',
+                    type: 'POS',
                     tags: ["Javascript", "Vue.js", "HTML", "SCSS", "Bulma", "Git"],
                     image: "assets/images/portfolio/pos.png",
                     imageV2: "",
@@ -939,29 +939,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-sm-12 col-md-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                            <form id="contactForm" class="single-form quate-form wow fadeInUp" data-toggle="validator">
-                                <div id="msgSubmit" class="h3 text-center hidden"></div>
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-12">
-                                        <input name="name" class="contact-name form-control" id="name" type="text" placeholder="First Name" required>
-                                    </div>
-                                    <div class="col-md-6 col-sm-12">
-                                        <input name="name" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <input name="name" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <textarea class="contact-message" id="message" rows="6" placeholder="Your Message" required></textarea>
-                                    </div>
-                                    Subject Button
-                                    <div class="btn-form col-sm-12 col-md-6">
-                                        <button type="submit" class="btn btn-fill btn-block" id="form-submit">Send Message</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div> -->
                         <div class="col-sm-12 col-md-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <form id="contactForm" class="single-form quate-form wow fadeInUp" data-toggle="validator" onsubmit="sendEmail(event)">
                                 <div id="msgSubmit" class="h3 text-center hidden"></div>
