--- a/index.html
+++ b/index.html
@@ -452,165 +452,11 @@
            PORTFOLIO
         ===================
         -->
-        <!-- <section class="mh-portfolio" id="mh-portfolio">
-            <div class="container">
-                <div class="row section-separator">
-                    <div class="section-title col-sm-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">
-                        <h3>Recent Portfolio</h3>
-                    </div>
-                    <div class="part col-sm-12">
-                        <div class="portfolio-nav col-sm-12" id="filter-button">
-                            <ul>
-                                <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                                <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
-                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Branding</span></li>
-                                <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
-                                <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
-                            </ul>
-                        </div>
-                        <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                            <div class="portfolioContainer row">
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                    <figure>
-                                        <img src="assets/images/portfolio/akhtar-1.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Akhtar Furnishers</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g2.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Delta Furnishers</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g3.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g5.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g5.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g4.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g4.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g6.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g6.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g8.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g8.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g9.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g9.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g7.jpg" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g7.jpg" data-fancybox="gallery"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                            </div> 
-                        </div> 
-                    </div>
-                </div>
-            </div>
-            <div class="mh-portfolio-modal" id="mh">
-                <div class="container">
-                    <div class="row mh-portfolio-modal-inner">
-                        <div class="col-sm-5">
-                            <h2>Akhtar Furnishers</h2>
-                            <p>Akhtar Furnishers stands as a pioneering force in the luxury furniture industry, redefining opulence as a lifestyle rather than a mere concept. In today's digital age, marked by convenience and innovation, Akhtar embarked on a transformative journey to revolutionize the luxury furniture sector through its cutting-edge e-commerce platform. This endeavor transcended traditional boundaries, aiming to reshape how people perceive and engage with luxury furniture by offering a curated collection of exquisite pieces that epitomize sophistication, elegance, and timeless design. </p>       
-                            
-                            <p>Through meticulous curation and a steadfast commitment to excellence, Akhtar Furnishers curated a collection of furniture pieces that tell a story of impeccable craftsmanship, refined aesthetics, and uncompromising luxury. Leveraging technology and embracing digital transformation, Akhtar Furnishers aimed to provide customers with unparalleled access to exquisite furniture pieces, right from the comfort of their homes. In essence, Akhtar Furnishers' journey represents a fusion of tradition and innovation, empowering customers to elevate their living spaces with furniture that exudes both beauty and functionality.</p>      
-                            <div class="mh-about-tag">
-                                <ul>
-                                    <li><span>Javascript</span></li>
-                                    <li><span>HTML</span></li>
-                                    <li><span>SCSS</span></li>
-                                    <li><span>Nuxt.js</span></li>
-                                    <li><span>Bootstrap</span></li>
-                                    <li><span>Git</span></li>
-                                </ul>
-                            </div>
-                            <a href="https://akhtar.com.bd/" class="btn btn-fill" target="_blank">Live Demo</a>
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="mh-portfolio-modal-img">
-                                <img src="assets/images/portfolio/akhtar-1.png" alt="" class="img-fluid">
-                                <p>All variations are organized separately so you can use / customize the template very easily.</p>    
-                                <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
-                                <p>All variations are organized separately so you can use / customize the template very easily.</p>     
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <section class="mh-portfolio" id="mh-portfolio">
             <div class="container">
                 <div class="row section-separator">
                     <div class="section-title col-sm-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">
-                        <h3>Recent Portfolio</h3>
+                        <h3>Portfolio</h3>
                     </div>
                     <div class="part col-sm-12">
                         <!-- <div class="portfolio-nav col-sm-12" id="filter-button">
@@ -624,52 +470,6 @@
                         </div> -->
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <div class="portfolioContainer row">
-                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface" data-title="Akhtar Furnishers" data-description="Akhtar Furnishers stands as a pioneering force..." data-tags="Javascript, HTML, SCSS, Nuxt.js, Bootstrap, Git" data-image="assets/images/portfolio/akhtar-1.png" data-live-url="https://akhtar.com.bd/">
-                                    <figure>
-                                        <img src="assets/images/portfolio/akhtar-1.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Akhtar Furnishers</h5>
-                                            <span class="sub-title">Photography</span>
-                                            <a href="#" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup" data-title="Delta Furnishers" data-description="Delta Furnishers description goes here..." data-tags="Javascript, HTML, CSS" data-image="assets/images/portfolio/g2.png" data-live-url="https://delta.com/">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g2.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Delta Furnishers</h5>
-                                            <span class="sub-title">Photography</span>
-                                            <a href="#" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div> -->
-                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface" data-id="1">
-                                    <figure>
-                                        <img src="assets/images/portfolio/akhtar-1.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Akhtar Furnishers</h5>
-                                            <span class="sub-title">Photography</span>
-                                            <a href="#" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup" data-id="2">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g2.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Delta Furnishers</h5>
-                                            <span class="sub-title">Photography</span>
-                                            <a href="#" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div> -->
-                                <!-- Add more grid items similarly -->
-                                
                                 <!-- Add more grid items similarly -->
                             </div>
                         </div>
